--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -1,20 +1,14 @@
 ---
 interface Props {
-	tag: string;
-	withHref?: boolean;
+  tag: string;
+  withHref?: boolean;
 }
-
 const { tag, withHref } = Astro.props;
 import '/src/styles/tag.css';
 ---
 
 {withHref ? (
-	<a href={`/tags/${tag}`} 
-	   class="tag">
-		#{tag}
-	</a>
+  <a href={`/tags/${tag}`} class="tag">#{tag}</a>
 ) : (
-	<span class="tag">
-		#{tag}
-	</span>
+  <span class="tag">#{tag}</span>
 )}
