--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -4,7 +4,7 @@ interface Props {
   withHref?: boolean;
 }
 const { tag, withHref } = Astro.props;
-import '/src/styles/tag.css';
+import '/src/styles/global.css';
 ---
 
 {withHref ? (
