--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,66 @@
-@import "tailwindcss";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@layer base, starlight, theme, components, utilities;
 
+@import '@astrojs/starlight-tailwind';
+@import 'tailwindcss/theme.css' layer(theme);
+@import 'tailwindcss/utilities.css' layer(utilities);
+
+:root {
+ 
+  --font-sans: 'Lucida Console';
+ 
+  --font-mono: 'Courier New', monospace;
+
+	--sl-color-accent-low: #36113e;
+	--sl-color-accent: #a400c0;
+	--sl-color-accent-high: #e3b6ed;
+	--sl-color-white: #ffffff;
+	--sl-color-gray-1: #f2e9fd;
+	--sl-color-gray-2: #c7bdd5;
+	--sl-color-gray-3: #9581ae;
+	--sl-color-gray-4: #614e78;
+	--sl-color-gray-5: #412e55;
+	--sl-color-gray-6: #2f1c42;
+	--sl-color-black: #1c1425;
+}
+:root[data-theme='light'] {
+	--sl-color-accent-low: #ebc9f3;
+	--sl-color-accent: #a700c3;
+	--sl-color-accent-high: #4e0e5b;
+	--sl-color-white: #1c1425;
+	--sl-color-gray-1: #2f1c42;
+	--sl-color-gray-2: #412e55;
+	--sl-color-gray-3: #614e78;
+	--sl-color-gray-4: #9581ae;
+	--sl-color-gray-5: #c7bdd5;
+	--sl-color-gray-6: #f2e9fd;
+	--sl-color-gray-7: #f8f4fe;
+	--sl-color-black: #ffffff;
+}
+
+.tag {
+    display: inline-block;
+    margin: 0 0.5rem 0.5rem 0;
+    padding: 0.25rem 0.75rem;
+    border-radius: 1rem;
+    background-color: #e4e4e4; /* Light mode default */
+    color: #000;
+    font-size: 0.75rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+  }
+  
+.tag:hover {
+    background-color: #cc6fdf;
+}
+
+html[data-theme="dark"] .tag {
+    background-color: #363330;
+    color: #fff;
+}
+
+html[data-theme="dark"] .tag:hover {
+    background-color: #cc6fdf;
+}
