--- a/src/components/TagsStyling.astro
+++ b/src/components/TagsStyling.astro
@@ -5,15 +5,15 @@ import '../styles/global.css';
 <style>
     :global(body) {
       margin: 5;
-      background-color: #200120; /* light purple */
+      background-color: #242424;
     }
     .container {
-      max-width: 900px;
+      max-width: 1200px;
       margin: 2rem auto;
-      padding: 0 1rem;
+      padding: 1rem 1rem;
       position: relative;
-    }
-  </style>
+    } 
+</style>
   
 <div class="container">
     <slot />
